--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "@testing-library/user-event": "^14.6.1",
     "axios": "^1.9.0",
     "framer-motion": "^12.12.1",
     "react": "^19.1.0",
@@ -34,6 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "jsdom": "^26.1.0",
+    "msw": "^2.8.5",
     "vite": "^6.3.5",
     "vitest": "^3.1.3"
   }
